examples/test/testpolicy5131.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5131
  namespace: namespace233
spec:
  podSelector:
    matchLabels:
      key47: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value26
          key5: value28
          key4: value6
      podSelector:
        matchLabels:
          key40: value30
          key4: value4
          key42: value38
